--- a/aais-site/package.json
+++ b/aais-site/package.json
@@ -9,6 +9,7 @@
     "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
     "react-scripts": "1.1.5"
   },
   "scripts": {
