--- a/aais-site/package.json
+++ b/aais-site/package.json
@@ -6,8 +6,10 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.4.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "popper.js": "^1.14.4",
     "react": "^16.4.2",
+    "react-big-calendar": "^0.19.2",
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
